--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,15 +1,13 @@
-マイページ
-<%= @user_sign_in.name %>
-<p>仕事・趣味・最近興味のあること</p>
-<div>
-  <%= form_with model: @user, url: user_path(params[:id]), local: true do |f| %>
-   <%= f.fields_for :introductions do |ff| %>
-    <%= render 'introduction_fields', f: ff %>
-   <% end %>
-   <%= link_to_add_association '明細を追加', f, :introductions %>
-  <% end %>
+<%= @user.name %>さんのマイページ
 
-  
+
+<p>仕事・趣味・最近興味のあること</p>
+<%= link_to "追加・編集", user_introductions_path(user_id: params[:id]) %>
+<div>
+ <% @introductions.each do |introduction| %>
+  <%= introduction.introduction_junre.name %>
+  <%= introduction.content %>
+ <% end %>
 </div>
 
 
